--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="textarea.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -74,7 +74,7 @@
 
 
 
-<script src="textarea.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
