--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,6 @@
             name="name" 
             id="name" 
             required 
-            aria-required="true" 
             maxlength="100">
         
         <!-- Campo de correo electrónico -->
@@ -37,8 +36,7 @@
             name="email" 
             id="email" 
             placeholder="@gmail.com" 
-            required 
-            aria-required="true" 
+            required
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
             maxlength="100">
         
@@ -50,7 +48,6 @@
             rows="5" 
             placeholder="Escribe tu mensaje aquí..." 
             required 
-            aria-required="true" 
             maxlength="500">
         </textarea>
 
