--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos</title>
+    <title>Quejas y Reclamos</title>
     <link rel="icon" href="https://static-00.iconduck.com/assets.00/forms-icon-2048x2048-9ssetxol.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="index.css">
